# NCS_ROS_SIM

./: README.md
docker/: ncs.Dockerfile  ncs_cuda_126.Dockerfile
scripts/deploy/: base.sh  devel.sh  start.sh
workspace/: client_run.sh
workspace/bed_control/: CMakeLists.txt  package.xml
workspace/bed_control/launch/: bed_control.launch
workspace/central_node/: CMakeLists.txt  package.xml  setup.py
workspace/central_node/launch/: central_node.launch
workspace/central_node/msg/: ControlCommand.msg  MpcPrediction.msg
workspace/central_node/scripts/: trajectory_planning.py
workspace/central_node/scripts/saved_delay_seq/: delay_seq_2_a.npy
workspace/central_node/src/mpc_controller/: mpc_main_normalized.py
workspace/ncsutils/: CubicSpline.py  SimParameters.py  base_classes.py  base_classes_without_upsampling.py  border_adjustment.py  create_path.py  delay_models.py  exp_track.npy  findTheta.py  helper_classes.py  params.py  racingTrack.py  straight_path.npy
workspace/ncsutils/maps_database/customRaceTrack/: corridor_waypoints.npy  racetrack.npy  racetrack_budapest.npy  racetrack_changed.npy  racetrack_e7.npy  track2.npy  track_final.npy
workspace/ncsutils/maps_database/racetrackStoredInfo/: racetrack_center_spline_object.dill  racetrack_inner_spline_object.dill  racetrack_outer_spline_object.dill  racetrack_waypoints_center.dill  racetrack_waypoints_inner.dill  racetrack_waypoints_outer.dill
workspace/ncsutils/ncsutils.egg-info/: PKG-INFO  SOURCES.txt
workspace/ncsutils/tests/: test_base_classes.py
workspace/network_sim/: CMakeLists.txt  package.xml
workspace/network_sim/launch/: network_sim.launch
workspace/network_sim/msg/: BedFeedback.msg  ControlCommandSeq.msg  Obstacle.msg
workspace/network_sim/scripts/: network_sim.py
workspace/vehicle/: CMakeLists.txt  package.xml  setup.py
workspace/vehicle/launch/: vehicle.launch
workspace/vehicle/scripts/: hospital_bed_node.py
workspace/vehicle/scripts/tests/: test_car_dynamics_pid.py
workspace/vehicle/src/vehicle/: car_dynamics_direct_control.py  car_dynamics_pid.py
workspace/vehicle_interface/: CMakeLists.txt  package.xml
workspace/vehicle_interface/launch/: vehicle_interface.launch
workspace/vehicle_interface/msg/: BedPose.msg  Perception.msg
workspace/vehicle_interface/scripts/: control_interface.py  control_seq.npy  feedback_interface.py
workspace/vehicle_sim/: CMakeLists.txt  package.xml
workspace/vehicle_sim/launch/: vehicle_sim.launch
workspace/vehicle_sim/scripts/: vehicle_sim.py
